examples/test/testpolicy15811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15811
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key23: value24
      key12: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value2
          key30: value44
      podSelector:
        matchLabels:
          key34: value41
